# psoc_062_4343W

./: .gitignore  .zephyr-env.sh  CMakeLists.txt  GEMINI.md  Kconfig  Readme.md  app.overlay  capture.txt  prj.conf  psoc_062_4343W.code-workspace  west.yaml
.cursor/rules/: psoc6-serial-mqtt-dev.mdc  psoc6-zephyr-project.mdc
boards/: cy8cproto_062_4343w.overlay  native_sim.conf
scripts/: attach-kitprog3.ps1  build-native-sim.sh  monitor.sh
src/: main.c  mqtt_module.c  mqtt_module.h  uart_rx.c  uart_rx.h  udp.c  udp.h  wifi_module.c  wifi_module.h
tools/: mosquitto-dev.conf
tools/mqtt-test-cli/: Cargo.toml  README.md
tools/mqtt-test-cli/src/: main.rs
